sas-core/main/default/objects/LIA_Major_Event__c/LIA_Major_Event__c.object-meta.xml
<CustomObject>
    <label>Major Event</label>
    <nameField>
        <label>Major Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Major Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>