sas-core/main/default/objects/LIA_Major_Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>When the major event ended</description>
    <inlineHelpText>When the major event ended</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>