sas-core/main/default/objects/LIA_Major_Event__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Auto generated Id for the event</description>
    <displayFormat>ME # {00000000}</displayFormat>
    <inlineHelpText>Auto generated Id for the event</inlineHelpText>
    <label>Major Event Id</label>
    <type>AutoNumber</type>
</CustomField>