sas-core/main/default/objects/LIA_Major_Event__c/fields/Major_Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Major_Event_Description__c</fullName>
    <label>Major Event Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>